set up repository pattern

--- a/LMS-System/appsettings.json
+++ b/LMS-System/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-ING5PNE\\SQLEXPRESS;Database=LmsSytem;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
