--- a/LMS-System/appsettings.json
+++ b/LMS-System/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-ING5PNE\\SQLEXPRESS;Database=LmsSytem;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-ING5PNE\\SQLEXPRESS;Database=LmsSystem;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
