Add new model to database

--- a/LMS-System/appsettings.json
+++ b/LMS-System/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-ING5PNE\\SQLEXPRESS;Database=LmsSystem;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "JWT": {
+    "Secret": "xDFXNoHwiZKtn6SDpHfYnYcUmu6HWSvkgMSIW5dL",
+    "ValidIssuer": "https://localhost:7162",
+    "ValidAudience": "https://localhost:7162"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
